--- a/package.json
+++ b/package.json
@@ -1,18 +1,24 @@
 {
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
-  },
-  "dependencies": {
-    "next": "latest",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
-  },
-  "devDependencies": {
-    "autoprefixer": "^10.2.6",
-    "postcss": "^8.3.5",
-    "tailwindcss": "^2.2.4"
-  }
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start"
+	},
+	"dependencies": {
+		"crypto": "^1.0.1",
+		"firebase": "^8.10.0",
+		"firebase-admin": "^9.11.1",
+		"next": "latest",
+		"react": "^17.0.2",
+		"react-dom": "^17.0.2",
+		"react-firebase-hooks": "^3.0.4",
+		"react-firebaseui": "^5.0.2",
+		"stream": "0.0.2"
+	},
+	"devDependencies": {
+		"autoprefixer": "^10.2.6",
+		"postcss": "^8.3.5",
+		"tailwindcss": "^2.2.4"
+	}
 }
