--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
 		"react-dom": "^17.0.2",
 		"react-firebase-hooks": "^3.0.4",
 		"react-firebaseui": "^5.0.2",
-		"stream": "0.0.2"
+		"react-icons": "^4.2.0",
+		"react-uuid": "^1.0.2",
+		"stream": "0.0.2",
+		"uuid": "^8.3.2"
 	},
 	"devDependencies": {
 		"autoprefixer": "^10.2.6",
