--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 		"start": "next start"
 	},
 	"dependencies": {
+		"@stripe/stripe-js": "^1.19.1",
 		"crypto": "^1.0.1",
 		"firebase": "^8.10.0",
 		"firebase-admin": "^9.11.1",
@@ -17,6 +18,7 @@
 		"react-icons": "^4.2.0",
 		"react-uuid": "^1.0.2",
 		"stream": "0.0.2",
+		"stripe": "^8.178.0",
 		"uuid": "^8.3.2"
 	},
 	"devDependencies": {
