--- a/firebase.json
+++ b/firebase.json
@@ -13,6 +13,7 @@
     "rewrites": [
       {
         "source": "**",
+        "function": "nextServer",
         "destination": "/index.html"
       }
     ]
@@ -23,6 +24,7 @@
   "functions": {
     "predeploy": [
       "npm --prefix \"$RESOURCE_DIR\" run lint"
-    ]
+    ],
+    "source": "functions"
   }
 }
