--- a/functions/package.json
+++ b/functions/package.json
@@ -1,26 +1,29 @@
 {
-  "name": "functions",
-  "description": "Cloud Functions for Firebase",
-  "scripts": {
-    "lint": "eslint .",
-    "serve": "firebase emulators:start --only functions",
-    "shell": "firebase functions:shell",
-    "start": "npm run shell",
-    "deploy": "firebase deploy --only functions",
-    "logs": "firebase functions:log"
-  },
-  "engines": {
-    "node": "14"
-  },
-  "main": "index.js",
-  "dependencies": {
-    "firebase-admin": "^9.8.0",
-    "firebase-functions": "^3.14.1"
-  },
-  "devDependencies": {
-    "eslint": "^7.6.0",
-    "eslint-config-google": "^0.14.0",
-    "firebase-functions-test": "^0.2.0"
-  },
-  "private": true
+	"name": "stripe-functions",
+	"description": "Stripe Firebase Functions",
+	"scripts": {
+		"lint": "./node_modules/.bin/eslint --max-warnings=0",
+		"serve": "firebase emulators:start --only functions",
+		"shell": "firebase functions:shell",
+		"start": "npm run shell",
+		"deploy": "firebase deploy --only functions",
+		"logs": "firebase functions:log",
+		"compile": "cp ../../tsconfig.template.json ./tsconfig-compile.json && tsc --project tsconfig-compile.json"
+	},
+	"engines": {
+		"node": "14"
+	},
+	"main": "index.js",
+	"dependencies": {
+		"@google-cloud/logging": "^7.2.3",
+		"firebase-admin": "^10.0.0",
+		"firebase-functions": "^3.15.7",
+		"stripe": "^8.56.0"
+	},
+	"devDependencies": {
+		"eslint": "^7.6.0",
+		"eslint-config-google": "^0.14.0",
+		"firebase-functions-test": "^0.2.0"
+	},
+	"private": true
 }
