--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
 		"start": "next start"
 	},
 	"dependencies": {
-		"@stripe/stripe-js": "^1.19.1",
+		"@stripe/stripe-js": "^1.20.3",
+		"axios": "^0.24.0",
 		"crypto": "^1.0.1",
 		"firebase": "^8.10.0",
 		"firebase-admin": "^9.11.1",
+		"firebase-functions": "^3.15.7",
 		"next": "latest",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
@@ -18,7 +20,7 @@
 		"react-icons": "^4.2.0",
 		"react-uuid": "^1.0.2",
 		"stream": "0.0.2",
-		"stripe": "^8.178.0",
+		"stripe": "^8.183.0",
 		"uuid": "^8.3.2"
 	},
 	"devDependencies": {
