--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"firebase": "^8.10.0",
 		"firebase-admin": "^9.11.1",
 		"firebase-functions": "^3.15.7",
+		"hamburgers": "^1.1.3",
 		"next": "latest",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
